--- a/IFE-Task/css/task-2-rebuilt.css
+++ b/IFE-Task/css/task-2-rebuilt.css
@@ -84,3 +84,8 @@ button {
     height: 50px;
     margin-left: 10%;
 }
+
+blockquote {
+    border-left: 3px solid rgb(222,222,222);
+    padding-left: 5px;
+}
