--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -10,5 +10,28 @@ body {
 
 #self-pic {
     border-radius: 100%;
+    width: 100px;
+    height: 100px;
+    margin-top: 20px;
 }
 
+.main-page {
+    display: none;
+}
+
+#self {
+    width: 100%;
+    height: 700px;
+    margin-top: 50px;
+    font-size: 30px;
+    background: radial-gradient(circle at center, #dff0d8, #f2dede);
+}
+#self hr {
+    border-top: 3px solid #ccc;
+    width: 600px;
+    margin:20px auto 20px auto;
+}
+#self p {
+    width: 400px;
+    margin:0 auto;
+}
