todo match iPhone5 and less

--- a/FCC/css/Portfolio.css
+++ b/FCC/css/Portfolio.css
@@ -1,7 +1,7 @@
 /*预定义样式*/
 
 .topnav {
-    background-color: rgba(10, 87, 155, 0.54);
+    background-color: rgb(214, 234, 230);;
     color: black;
     border: none;
 }
