--- a/JavaScripts30/SPA/css/spa.shell.css
+++ b/JavaScripts30/SPA/css/spa.shell.css
@@ -68,8 +68,13 @@
     right: 0;
     width: 300px;
     height: 15px;
+    cursor: pointer;
     background-color: red;
+    border-radius: 5px 0 0 0;
     z-index: 1;
+}
+.spa-shell-chat:hover {
+    background-color: #a00;
 }
 .spa-shell-modal {
     margin-top: -200px;
