--- a/DailyUI100Days/Day2CreditCard/style.css
+++ b/DailyUI100Days/Day2CreditCard/style.css
@@ -2,6 +2,7 @@ html, body {
     width: 100%;
     height: 100%;
     margin: 0;
+    background: linear-gradient(50deg, #f3c680, #a1e3e2);
 }
 
 .cards-flow {
@@ -68,8 +69,74 @@ html, body {
     width: 630px;
     min-height: 400px;
     margin: 80px auto 0 auto;
+    position: relative;
 }
 
 .cards-info fieldset {
-    height: 400px;
+    height: 450px;
+    border-radius: 10px;
+    border: none;
+    background-image: linear-gradient(to right bottom, #e86666, #29988e);
+}
+
+.cards-info fieldset legend{
+    background:  linear-gradient(to right bottom, #e86666, #29988e);;
+    color: white;
+    border-radius: 5px;
+    font-size: 24px;
+}
+.cards-info .logo {
+    width: 100px;
+    height: 100px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    margin: 20px;    
+}
+
+.cards-info h1 {
+    font-size: 16px;
+    font-weight: 400;
+    text-indent: 20px;
+}
+
+.card-number {
+    min-width: 600px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.card-number input, .card-holder, input[type='submit'] {
+    width: 90px;
+    height: 30px;
+    border-radius: 5px;
+    outline: none;
+    -webkit-appearance: none;
+    border: none;
+    font-size: 30px;
+    text-align: center;
+}
+
+.card-holder {
+    width: 90% !important;
+    margin-left: 29px;
+    text-align: left;
+}
+
+.days, .years {
+    width: 90px;
+    height: 34px;
+    border-radius: 5px;
+    margin-left: 29px;
+    border-color: #ccc;
+}
+
+input[type='submit'] {
+    display: block;
+    width: 90%;
+    height: 50px;
+    margin-left: 29px;
+    margin-top: 10px;
+    background-color: #03f4e9;
+    color: white;
 }
