--- a/DailyUI100Days/Day3LandingPage/style.css
+++ b/DailyUI100Days/Day3LandingPage/style.css
@@ -16,6 +16,7 @@ html, body {
      justify-content: center;
      flex-flow: column;
      overflow: hidden;
+     background: linear-gradient(50deg, #f3c680, #a1e3e2);
  }
 
 header {
@@ -23,10 +24,16 @@ header {
     justify-content: space-around;
 }
 
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    letter-spacing: 5px;
+}
+
  .navbar {
      width: 30px;
      height: 30px;
-     border: 1px solid #ccc; /*delete*/
+     cursor: pointer;
 }
 
 .contact {
@@ -39,54 +46,4 @@ header {
     width: 600px;
     height: 600px;
     align-self: center;
-    border: 1px solid #ccc; /*delete*/;
 }
-
-.about .big-circle {
-    width: 100%;
-    height: 100%;
-    border: 1px solid #ccc;
-    border-radius: 100%;
-    position: relative;
-    animation: spin 15s linear forwards infinite;
-    
-}
-
-.about .big-circle .one {
-    width: 100%;
-    height: 100%;
-    border-color: blue transparent;
-    border-width: 2px;
-    border-style: solid;
-    border-radius: 50%;
-    animation: spin 9s ease-in-out infinite;
-    position: relative;
-}
-
-@keyframes spin {
-    0% {
-        transform: rotateZ(0);
-    }
-    100% {
-        transform: rotateZ(360deg);        
-    }
-}
-
-
-
-.big-circle span {
-    width: 30px;
-    height: 30px;
-    display: inline-block;
-    border-radius: 50%;
-    border: 1px solid blue;
-    position: absolute;
-    text-align: center;
-    font-size: 50px;
-    line-height: 0;
-    text-indent: 7px;
-    color: blue;
-    left: 186px;
-    cursor: pointer;
-}
-
