--- a/DailyUI100Days/Day7Setting/style.css
+++ b/DailyUI100Days/Day7Setting/style.css
@@ -148,11 +148,11 @@ input, textarea, button {
     height: 40px;
     font-size: 16px;
     position: relative;
-    top: 9px;
-    color: white;    
+    top: 9px;  
 }
 
-.detail input:focus + label{
+
+.detail input:focus + label, .detail input:valid + label{
     top: 0 !important;
     font-size: 12px !important;
     transition: all 0.2s ease-out !important;
@@ -161,6 +161,7 @@ input, textarea, button {
     transition: background-color 100ms ease-out;
     background-color: #866972;
     cursor: pointer;
+    color: white;
 }
 .detail input:last-child:hover {
     transition: background-color 100ms ease-out;
