--- a/DailyUI100Days/Day9MusicPlayer/style.css
+++ b/DailyUI100Days/Day9MusicPlayer/style.css
@@ -61,7 +61,7 @@ html, body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 60%;
 }
 
 .content .spin {
@@ -69,5 +69,39 @@ html, body {
     height: 200px;
     border-radius: 50%;
     background: white;
-    opacity: 0.4;
+    opacity: 0.6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.spin .spin-black {
+    width: 80%;
+    height: 80%;
+    border-radius: 100%;
+    background: -webkit-linear-gradient(white, black);
+    background: -o-linear-gradient(white, black);
+    background: linear-gradient(to top left, black, black);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.spin-black .musicer {
+    width: 80%;
+    height: 80%;
+    border-radius: 100%;
+    background: url('pryde.jpg') center no-repeat;
+    background-size: cover;
+    z-index: 99;
+    animation: spin 6s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotateZ(0);
+    }
+    100% {
+        transform: rotateZ(360deg);
+    }
 }
