--- a/DailyUI100Days/Day9MusicPlayer/style.css
+++ b/DailyUI100Days/Day9MusicPlayer/style.css
@@ -36,11 +36,20 @@ html, body {
     border-bottom: 1px solid black;
 }
 
+.player header span {
+    padding: 0 5px;
+}
+
+.player header .share {
+    text-align: right;
+}
+
 .player h1 {
     position: relative;
     font-size: 12px;
     flex: 1;
     margin: 0;
+    text-align: center;
 }
 
 .player span {
@@ -87,7 +96,7 @@ html, body {
     align-items: center;
 }
 
-.spin-black .musicer {
+.spin-black .musician {
     width: 80%;
     height: 80%;
     border-radius: 100%;
@@ -104,4 +113,74 @@ html, body {
     100% {
         transform: rotateZ(360deg);
     }
+}
+
+.controler {
+    width: 100%;
+    height: 32%;
+    display: flex;
+    flex-flow: column;
+}
+
+.controler div {
+    flex: 1;
+}
+
+.controler .part1 {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.controler .part1 span {
+    cursor: pointer;
+}
+
+.controler #more span {
+    width: 10px;
+    height: 10px;
+    display: block;
+    border-radius: 100%;
+    margin: 5px auto;
+    background: black;
+}
+
+.controler .part2 {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    line-height: 71.14px;
+}
+
+.controler .part2 span {
+    font-size: 16px;
+}
+
+.controler .part2 #progressBar {
+    flex: 5;
+    margin: 32px 2px;
+    border-radius: 2px;
+    border: 1px solid #ccc;
+    position: relative;
+    cursor: pointer;
+}
+
+.controler .part2 #progressBar::before {
+    content: '';
+    position: absolute;
+}
+
+.controler .part2 #progressBar::after {
+    content: '';
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: white;
+    padding: 5px;
+    border-radius: 50%;
+    transform: translateY(-7px) translateX(-135px);
+}
+
+.controler .part3 {
+
 }
