--- a/DailyUI100Days/Day10ShareButton/style.css
+++ b/DailyUI100Days/Day10ShareButton/style.css
@@ -38,17 +38,18 @@ input {
 a {
     color: darkgray;
     position: absolute;
+    z-index: -1;
 }
 
 a::after {
     content: '';
-    width: 8px;
-    height: 60px;
+    width: 5px;
+    height: 50px;
     display: inline-block;
     background: #ccc;
     position: absolute;
-    top: 65px;
-    left: 27px;
+    top: 55px;
+    left: 23px;
 }
 
 main div {
@@ -64,12 +65,21 @@ main div {
 
 
 main div:nth-child(1)  a {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     border-radius: 100%;
-    font-size: 30px;
-    line-height: 60px;
+    font-size: 24px;
+    line-height: 50px;
     text-align: center;
     border: 5px solid #ccc;
-    transform: translateX(15px) translateY(15px);
+    transform: translateX(20px) translateY(-15px) scale(0.5);
+    /*opacity: 0;*/
+    transition: transform 1s ease-in-out, opacity 1s ease-in-out;
+    animation: test 1s ease-in-out;
+}
+
+main div:nth-child(1) input:focus ~ a {
+    transform: translateX(20px) translateY(-110px) scale(1);
+    /*opacity: 1;*/
+    transition: transform 1s ease-in-out, opacity 1s ease-in-out;
 }
