--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -7,6 +7,7 @@ html, body {
     justify-content: center;
     align-items: center;
     align-content: center;    
+    overflow: hidden;
 }
 
 body {
