--- a/PractiseProject/Responsive/main.css
+++ b/PractiseProject/Responsive/main.css
@@ -54,6 +54,7 @@ ul {
 
 .header__inner {
   width: 800px;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -82,6 +83,7 @@ ul {
 
 .nav {
   width: 800px;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -122,6 +124,7 @@ ul {
 main {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
   width: 800px;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -142,6 +145,7 @@ main {
 .hero {
   float: left;
   width: 480px;
+  max-width: 100%;
   position: relative;
   background-image: url("./images/dog.jpg");
   background-size: cover;
@@ -215,6 +219,7 @@ main {
 
 .scores {
   width: 480px;
+  max-width: 100%;
   float: left;
   padding-top: 1em;
 }
