--- a/PractiseProject/SlideShow/style.css
+++ b/PractiseProject/SlideShow/style.css
@@ -16,18 +16,22 @@ html, body {
     z-index: 1;
 }
 
-.container:before, .container:after {
-    background-color: gray;
+.left, .right {
     width: 30px;
     height: 50px;
     background-repeat: no-repeat;
     opacity: 0.8;
     background-position: center;
     cursor: pointer;
+    transition: all 0.5s ease-out;    
 }
 
-.container:before {
-    content: ' ';
+.left:hover, .right:hover {
+    background-color: gray;
+    transition: all 0.5s ease-out;
+}
+
+.left {
     background-image: url(img/arrow.png);
     position: absolute;
     transform: rotate(180deg);
@@ -37,8 +41,7 @@ html, body {
     margin-top: -30px;
 }
 
-.container:after {
-    content: ' ';
+.right {
     background-image: url(img/arrow.png);
     position: absolute;
     top: 50%;
