--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -121,229 +121,117 @@ header {
   margin: 10px;
 }
 
-/* Heart Start */
+/* READ MORE START */
+@import url('https://fonts.googleapis.com/css?family=Raleway:200');
 
-@import url("https://fonts.googleapis.com/css?family=Lato:100");
-.flex-container {
-  position: relative;
+#box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  z-index: 1;
-  margin-top: 100px;
-  opacity: 0.8;
+  width: 150px;
+  height: 80px;
+  color: white;
+  font-family: 'Raleway';
+  font-size: 1.5rem;
+  cursor: pointer;
 }
 
-.unit {
-  text-align: center;
-}
-.unit p {
-  margin-top: 100px;
-  font-family: 'Lato', sans-serif;
-  font-weight: 100;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  color: #fff;
-}
-.heart {
+.read-more {
+  --borderWidth: 3px;
   position: relative;
-  font-size: 0;
-  width: 138px;
-}
-[class*="heart-piece-"] {
-  position: absolute;
-  top: -5px;
-  width: 10px;
-  height: 10px;
-  border-radius: 5px;
-}
-.heart-piece-4 {
-  -webkit-animation: piece-4 3.2s infinite;
-          animation: piece-4 3.2s infinite;
-}
-.heart-piece-3,
-.heart-piece-5 {
-  -webkit-animation: piece-3 3.2s infinite;
-          animation: piece-3 3.2s infinite;
-}
-.heart-piece-2,
-.heart-piece-6 {
-  -webkit-animation: piece-2 3.2s infinite;
-          animation: piece-2 3.2s infinite;
-}
-.heart-piece-1,
-.heart-piece-7 {
-  -webkit-animation: piece-1 3.2s infinite;
-          animation: piece-1 3.2s infinite;
-}
-.heart-piece-0,
-.heart-piece-8 {
-  -webkit-animation: piece-0 3.2s infinite;
-          animation: piece-0 3.2s infinite;
-}
-.heart-piece-0 {
-  left: 0px;
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
-  background-color: #ec2d73;
-}
-.heart-piece-1 {
-  left: 16px;
-  -webkit-animation-delay: 0.15s;
-          animation-delay: 0.15s;
-  background-color: #eb5324;
-}
-.heart-piece-2 {
-  left: 32px;
-  -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s;
-  background-color: #fdc800;
-}
-.heart-piece-3 {
-  left: 48px;
-  -webkit-animation-delay: 0.45s;
-          animation-delay: 0.45s;
-  background-color: #47b264;
-}
-.heart-piece-4 {
-  left: 64px;
-  -webkit-animation-delay: 0.6s;
-          animation-delay: 0.6s;
-  background-color: #1470bd;
-}
-.heart-piece-5 {
-  left: 80px;
-  -webkit-animation-delay: 0.75s;
-          animation-delay: 0.75s;
-  background-color: #76469a;
-}
-.heart-piece-6 {
-  left: 96px;
-  -webkit-animation-delay: 0.9s;
-          animation-delay: 0.9s;
-  background-color: #ec2d73;
-}
-.heart-piece-7 {
-  left: 112px;
-  -webkit-animation-delay: 1.05s;
-          animation-delay: 1.05s;
-  background-color: #eb5324;
-}
-.heart-piece-8 {
-  left: 128px;
-  -webkit-animation-delay: 1.2s;
-          animation-delay: 1.2s;
-  background-color: #fdc800;
-}
-@-webkit-keyframes piece-4 {
-  0%, 10%, 90%, 100% {
-    height: 10px;
-    top: -5px;
-  }
-  45%, 55% {
-    height: 94px;
-    top: -23px;
-  }
-}
-@keyframes piece-4 {
-  0%, 10%, 90%, 100% {
-    height: 10px;
-    top: -5px;
-  }
-  45%, 55% {
-    height: 94px;
-    top: -23px;
-  }
-}
-@-webkit-keyframes piece-3 {
-  0%, 10%, 90%, 100% {
-    height: 10px;
-    top: -5px;
-  }
-  45%, 55% {
-    height: 90px;
-    top: -31px;
-  }
-}
-@keyframes piece-3 {
-  0%, 10%, 90%, 100% {
-    height: 10px;
-    top: -5px;
-  }
-  45%, 55% {
-    height: 90px;
-    top: -31px;
-  }
-}
-@-webkit-keyframes piece-2 {
-  0%, 10%, 90%, 100% {
-    height: 10px;
-    top: -5px;
-  }
-  45%, 55% {
-    height: 80px;
-    top: -37px;
-  }
-}
-@keyframes piece-2 {
-  0%, 10%, 90%, 100% {
-    height: 10px;
-    top: -5px;
-  }
-  45%, 55% {
-    height: 80px;
-    top: -37px;
-  }
-}
-@-webkit-keyframes piece-1 {
-  0%, 10%, 90%, 100% {
-    height: 10px;
-    top: -5px;
-  }
-  45%, 55% {
-    height: 60px;
-    top: -31px;
-  }
-}
-@keyframes piece-1 {
-  0%, 10%, 90%, 100% {
-    height: 10px;
-    top: -5px;
-  }
-  45%, 55% {
-    height: 60px;
-    top: -31px;
-  }
-}
-@-webkit-keyframes piece-0 {
-  0%, 10%, 90%, 100% {
-    height: 10px;
-    top: -5px;
-  }
-  45%, 55% {
-    height: 30px;
-    top: -15px;
-  }
-}
-@keyframes piece-0 {
-  0%, 10%, 90%, 100% {
-    height: 10px;
-    top: -5px;
-  }
-  45%, 55% {
-    height: 30px;
-    top: -15px;
-  }
+  border-radius: var(--borderWidth);
+  background: -webkit-linear-gradient(30deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);  
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  border-radius: calc(2 * var(--borderWidth));
+  -webkit-animation: animatedgradient 3s ease alternate infinite;
+          animation: animatedgradient 3s ease alternate infinite;
+  background-size: 300% 300%;
 }
 
-/* Heart End */
+.read-more a {
+  text-decoration: none;
+  color: white;
+}
+
+@-webkit-keyframes animatedgradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+@keyframes animatedgradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+/* READ MORE END */
 
 /* Introduction End */
+
+/* Main START */
+.main {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row;
+  flex-wrap: wrap;
+}
+
+.main section {
+  border: 1px solid gainsboro;
+  border-radius: 5px;
+  margin: 10px 0;
+  font-family: 'Raleway';
+  min-width: 300px;
+}
+
+.title {
+  font-weight: 500;
+  border-bottom: 1px solid gainsboro;
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  color: #ef4e7b;
+}
+
+.content {
+  width: 100%;
+  height: 300px;
+  position: relative;
+}
+
+.content img {
+  width: 100%;
+  height: 300px;
+  position: absolute;
+  z-index: -1;
+}
+
+.content p {
+  color: white;
+  padding: 20px;
+  position: absolute;
+  top: 100px;
+}
+
+/* Main END */
