--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -194,44 +194,139 @@ header {
   align-items: center;
   flex-flow: row;
   flex-wrap: wrap;
+  background-color: #212121;
 }
 
-.main section {
-  border: 1px solid gainsboro;
-  border-radius: 5px;
-  margin: 10px 0;
-  font-family: 'Raleway';
-  min-width: 300px;
-}
-
-.title {
-  font-weight: 500;
-  border-bottom: 1px solid gainsboro;
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,600);
+.snip1336 {
+  font-family: 'Roboto', Arial, sans-serif;
+  position: relative;
+  float: left;
+  overflow: hidden;
+  margin: 10px 1%;
+  min-width: 230px;
+  max-width: 315px;
   width: 100%;
-  height: 40px;
-  text-align: center;
-  line-height: 40px;
-  color: #ef4e7b;
+  color: #ffffff;
+  text-align: left;
+  line-height: 1.4em;
+  background-color: #141414;
 }
-
-.content {
+.snip1336 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+}
+.snip1336 img {
+  max-width: 100%;
+  vertical-align: top;
+  opacity: 0.85;
+}
+.snip1336 figcaption {
   width: 100%;
-  height: 300px;
+  background-color: #141414;
+  padding: 25px;
   position: relative;
 }
-
-.content img {
-  width: 100%;
-  height: 300px;
+.snip1336 figcaption:before {
   position: absolute;
-  z-index: -1;
+  content: '';
+  bottom: 100%;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 55px 0 0 400px;
+  border-color: transparent transparent transparent #141414;
 }
-
-.content p {
-  color: white;
-  padding: 20px;
+.snip1336 figcaption a {
+  padding: 5px;
+  border: 1px solid #ffffff;
+  color: #ffffff;
+  font-size: 0.7em;
+  text-transform: uppercase;
+  margin: 10px 0;
+  display: inline-block;
+  opacity: 0.65;
+  width: 47%;
+  text-align: center;
+  text-decoration: none;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+.snip1336 figcaption a:hover {
+  opacity: 1;
+}
+.snip1336 .profile {
+  border-radius: 50%;
   position: absolute;
-  top: 100px;
+  bottom: 100%;
+  left: 25px;
+  z-index: 1;
+  width: 90px;
+  height: 90px;
+  opacity: 1;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+}
+.snip1336 .follow {
+  margin-right: 4%;
+  border-color: #2980b9;
+  color: #2980b9;
+}
+.snip1336 h2 {
+  margin: 0 0 5px;
+  font-weight: 300;
+}
+.snip1336 h2 span {
+  display: block;
+  font-size: 0.5em;
+  color: #2980b9;
+}
+.snip1336 p {
+  margin: 0 0 10px;
+  font-size: 0.8em;
+  letter-spacing: 1px;
+  opacity: 0.8;
 }
 
 /* Main END */
+
+/* FOOTER　START */
+.footer {
+  background: #495453;
+  color: #e0d2c5;
+  padding: 40px;
+  font-family: "brandon-grotesque","Brandon Grotesque","Source Sans Pro","Segoe UI",Frutiger,"Frutiger Linotype","Dejavu Sans","Helvetica Neue",Arial,sans-serif!important;
+  text-align: center;
+}
+
+.footer a, .footer span {
+  transition: 150ms ease-out;
+  will-change: background;
+  display: inline-block;
+  padding: 0 6px;
+  border-radius: 3px;
+  color: white;
+  font-weight: 500;
+  line-height: 40px;
+}
+
+.email {
+  background: #2daae1;
+  text-decoration: none;
+}
+
+.email:hover {
+  background: #9dd7f1;
+}
+
+.phone {
+  background: #222;
+}
+
+.phone:hover {
+  background: #3c3c3c;
+}
+
+/* FOOTER END */
